# MSc-XAI-RL

./: .gitignore  README.md  pyproject.toml
agents/: __init__.py  box_escape_human_player.py  ddqn_agent.py  double_dqn_agent.py  human_player.py  ppo_agent.py  ppo_agent_v2.py  ppo_agent_with_model_class.py
agents/custom_types/: ddqn_model_training_config.py  experience.py  model_training_config.py  ppo_model_training_config.py
agents/util_classes/: replay_buffer.py  reward_queue.py  test_logger.py  trajectory_buffer.py  wandb_logger.py
agents/utils/: observation_normalization_callbacks.py  replay_buffer.py  wandb_logger.py
car_racing/: car_racing.py
environments/: __init__.py
environments/avocado_run/: README.md
environments/box_escape/: README.md  setup.py
environments/box_escape_lite/: README.md  setup.py
environments/box_escape_minigrid/: README.md  setup.py
environments/ccr/: README.md  setup.py
environments/changing_supervisor/: README.md  setup.py
environments/fruit_run/: README.md
environments/gem_collector/: README.md  setup.py
environments/gold_run/: README.md  setup.py
environments/gold_run_mini/: README.md  setup.py
environments/minecart_counter/: README.md  setup.py
environments/rgb_array_to_human_obs_converters/: ensure_save_dir_exists.py  gc_save_human_obs_from_rgb_array_obs.py  grm_save_human_obs_from_rgb_array_obs.py  mc_save_human_obs_from_rgb_array_obs.py
experiments/: concept_example_experiments.ipynb
experiments/ace_experiments/: concept_completness_evaluation.ipynb  k_means_clustering_evaluation.ipynb
experiments/cav_likeness/: matched_cav_visulization.ipynb
experiments/concept_completeness_experiments/: concept_completness_evaluation.ipynb
experiments/concept_example_experiments/: concept_example_accumulation.ipynb  concept_example_activations_variance.ipynb  concept_probe_scores.ipynb  concept_probe_validation_sets_eda.ipynb
rl_ace/: __init__.py  fc_means_clusterer.py  k_means_clusterer.py
rl_ace/k_selection/: concept_probe_score_k_selector.py  elbow_method_k_selector.py  k_selector.py  (+2 more)
rl_ccm/: __init__.py  ccm.py  ccm_dt.py  ccm_nn.py  get_base_and_eval_dataset.py
rl_ice/: __init__.py  ice.py
rl_tcav/: __init__.py  cav.py  model_activation_obtainer.py  tcav_class_label_example_collector.py  tcav_scorer.py
utils/: __init__.py  ensure_save_directory_exists.py  model_activation_obtainer.py
(+286 files in other folders)
