[project]
name = "msc-xai-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=24.10.0",
    "gymnasium>=1.0.0",
    "isort>=5.13.2",
    "keras>=3.7.0",
    "numpy>=2.0.2",
    "pygame>=2.6.1",
    "tensorflow>=2.18.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.1",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
