[project]
name = "msc-xai-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "avocado-run",
    "black>=24.10.0",
    "box2d-py>=2.3.8",
    "ccr",
    "gymnasium[other]>=1.0.0",
    "isort>=5.13.2",
    "keras>=3.7.0",
    "minigrid>=3.0.0",
    "miniworld>=2.1.0",
    "numpy>=2.0.2",
    "pygame>=2.6.1",
    "scikit-learn>=1.6.1",
    "swig>=4.3.0",
    "tensorflow>=2.18.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.1",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.uv.sources]
avocado-run = { path = "environments/avocado_run" }
ccr = { path = "environments/ccr" }
