[project]
name = "msc-xai-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=24.10.0",
    "box-escape-lite",
    "box2d-py>=2.3.8",
    "ccr",
    "changing-supervisor",
    "gem-collector",
    "gold-run-mini",
    "gymnasium[other]>=1.0.0",
    "isort>=5.13.2",
    "keras>=3.7.0",
    "minecart-counter",
    "minigrid>=3.0.0",
    "miniworld>=2.1.0",
    "numpy>=2.0.2",
    "pygame>=2.6.1",
    "scikit-learn>=1.6.1",
    "swig>=4.3.0",
    "tensorflow>=2.18.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.1",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.uv.sources]
gem-collector = { path = "environments/gem_collector" }
box-escape-lite = { path = "environments/box_escape_lite" }
ccr = { path = "environments/ccr" }
changing-supervisor = { path = "environments/changing_supervisor" }
minecart-counter = { path = "environments/minecart_counter" }
gold-run-mini = { path = "environments/gold_run_mini" }
